# ai-support

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml
extensions-macros/: Cargo.toml
extensions-macros/src/: lib.rs
src/: config.rs  lib.rs  main.rs  state.rs
src/agent/: client.rs  context.rs
src/db/: mod.rs
src/db/migrations/: 001_initial.sql  002_issues.sql  003_memories.sql  004_user_info.sql
src/discord/: commands.rs  gateway.rs  interactions.rs  mod.rs  react.rs  respond.rs
src/extensions/: example_extension.rs  mod.rs  traits.rs
src/info_collector/: collector.rs  mod.rs  types.rs  ui.rs
src/issues/: hooks.rs  mod.rs
src/knowledge/: embed.rs  mod.rs
src/memory/: hooks.rs  mod.rs
tests/: fire_hook.rs
tests/ui/: invalid_hook_event.rs  invalid_hook_event.stderr
