[package]
name = "ai-support"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.102"
async-openai = { version = "0.33.0", features = ["_api", "chat-completion"] }
axum = "0.8.8"
dashmap = "6.1.0"
dotenvy = "0.15.7"
ed25519-dalek = "2.2.0"
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "sync"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
twilight-gateway = "0.17.1"
twilight-http = "0.17.1"
twilight-model = "0.17.1"
