[workspace]
members = [".", "extensions-macros"]
resolver = "2"

[package]
name = "ai-support"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.102"
async-openai = { version = "0.33.0", features = ["_api", "chat-completion", "moderation", "embedding"] }
axum = "0.8.8"
dashmap = "6.1.0"
dotenvy = "0.15.7"
ed25519-dalek = "2.2.0"
extensions-macros = { path = "extensions-macros" }
hex = "0.4.3"
inventory = "0.3"
pgvector = { version = "0.4", features = ["sqlx"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "sync"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
twilight-gateway = "0.17.1"
twilight-http = "0.17.1"
twilight-model = "0.17.1"

[dev-dependencies]
trybuild = { version = "1", features = ["diff"] }
